--- a/Journals/10-Python Decorators/01-Decorators.ipynb
+++ b/Journals/10-Python Decorators/01-Decorators.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -752,6 +752,17 @@
       "Calling decorated function\n",
       "I am the wrapper around the decorated function. I am called when you call the decorated function. As the wrapper, I return the RESULT of the decorated function.\n",
       "I am the decorated function.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "decorator_maker() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5fcde1c2dfb3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[1;31m#I am the decorated function.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m \u001b[1;33m@\u001b[0m\u001b[0mdecorator_maker\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msub_decorated_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"TEST FUNCTION\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: decorator_maker() takes 0 positional arguments but 1 was given"
      ]
     }
    ],
@@ -839,7 +850,13 @@
     "#outputs:\n",
     "#I am the wrapper around the decorated function. I am called when you call the decorated function.\n",
     "#As the wrapper, I return the RESULT of the decorated function.\n",
-    "#I am the decorated function."
+    "#I am the decorated function.\n",
+    "\n",
+    "@decorator_maker\n",
+    "def sub_decorated_function():\n",
+    "    print(\"TEST FUNCTION\")\n",
+    "\n",
+    "sub_decorated_function()"
    ]
   },
   {
